compiler/tests/should-fail/UndefinedVariable1.via
/* UndefinedNameError */

process main {
    x = 1;
}
